  - optimized Devices List generation time (alec)
  - helpdesk: changed queues privilages system (alec)
  - helpdesk: some one-time functions from LMS class moved to modules (alec)
  - helpdesk: added notes to tickets (alec)
  - helpdesk: new note/message e-mail notification on demand (alec)
  - lms-payments, lmsd/payments: fixed problem with discounts invoicing (alec)

version 1.9.6 Belos (2007-02-16):

  - project's homepage changed to www.lms.org.pl (lukasz)
  - now is possible to define password for device's IP (alec)
  - added nodes list (and report) filtering by customer's group (alec)
  - cash receipts: added document's positions clearing when customer 
    is changing (alec) 
  - lms-traffic-logiptables: added 'networks' option (alec)
  - BTS#0000625: one-address DHCP ranges allowed (alec)
  - lmsd: don't save config.status when using configure script
    with option --help (alec)
  - BTS#0000603: lmsd: instance names with spaces works with -i option (alec)  
  - BTS#0000594: clickable gateway record when selecting IP for network
    device's IP (alec)
  - cash receipts: 'other' target name is required now (alec)
  - cash receipts: all not accounted invoices are checked by default (alec)
  - customergroups: filter by networks feature added (chilek)

version 1.9.5 Tagar (2007-02-05):

  - traffic stats: saving chosen network in session (chilek)
  - rtticketedit: fixed regression connected with undefined customerid (chilek)
    **********************************************************************************
  - increased requirements to MySQL 5.0.7 (alec)
  - removed support for non-unicode encoding by option database/server_encoding (alec)
  - added mysql's "SET NAMES utf8" in scripts and daemon (alec)
    **********************************************************************************
  - fixed warning setting in customer searching results list (alec)
  - balanceadd: fixed incorrect datetime checking - we let datetime to be